# rust-api

./: .env  .env.example  Cargo.toml  Makefile  README.md
docker/api/: Dockerfile
docker/migration/: Dockerfile
docker/nginx/: Dockerfile  dnsmasq.conf  nginx.conf
docker/nginx/sites/: fe.conf
entity/src/: blog.rs  mod.rs  post.rs  prelude.rs
k8s/controllers/: ingress-controller.yaml
k8s/kustomize/: customized-manifest.yaml
k8s/kustomize/base/: kustomization.yaml
k8s/kustomize/base/configmaps/: deployments-conf.yaml
k8s/kustomize/base/deployments/api/: base.yaml  extras-deployment.yaml
k8s/kustomize/base/deployments/db/: base.yaml  extras-deployment.yaml
k8s/kustomize/overlays/dev/: kustomization.yaml
k8s/kustomize/overlays/dev/configmaps/: deployments-conf.yaml
k8s/kustomize/overlays/dev/deployments/api/: base.yaml  extras-deployment.yaml
k8s/kustomize/overlays/prod/: kustomization.yaml
k8s/kustomize/overlays/prod/configmaps/: deployments-conf.yaml
k8s/tasks/run-migrations/: customized-manifest.yaml
k8s/tasks/run-migrations/base/: job.yaml  kustomization.yaml
k8s/tasks/run-migrations/overlays/dev/: env.yaml
k8s/tasks/run-migrations/overlays/prod/: args.yaml  kustomization.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230810_192257_create_blog_table.rs
src/: lib.rs  main.rs
src/handlers/: posts.rs
src/mappers/: posts.rs
src/requests/: posts.rs  users.rs
src/services/: mod.rs  posts.rs  posts_sqlx.rs
src/shared/: db.rs
src/stores/: posts.rs  posts_sqlx.rs
(+1 files in other folders)
